bug: 流ContentType判断规则和前台不一致问题